--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ stackoverflow:     325674/rob-porter
 linkedin:          rgeraldporter
 #xing:              username
 instagram:          rgeraldporter
+medium:             '@rgeraldporter'
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
