--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'Digital Naturalist || Co-founder and CIO at Weever Apps'
 description:        "Digital Naturalist"
 reading_time:       false
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/feather-7.svg'
 background:         'assets/img/sunset-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_CA
