--- a/_config.yml
+++ b/_config.yml
@@ -38,12 +38,12 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+#email:              rob@inpictures.ca
 twitter:            rgeraldporter
 #facebook:           username
 github:             rgeraldporter
-stackoverflow:     325674/rob-porter
-linkedin:          rgeraldporter
+stackoverflow:      325674/rob-porter
+linkedin:           rgeraldporter
 #xing:              username
 instagram:          rgeraldporter
 medium:             '@rgeraldporter'
