--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ background:         'assets/img/sunset-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_CA
 url:                http://robporter.ca
-url:                http://127.0.0.1:4000/
+#url:                http://127.0.0.1:4000/
 
 # Jekyll
 permalink:          /:title/
