--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ url:                http://robporter.ca
 
 # Jekyll
 permalink:          /:title/
+future:             false
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
