--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/feather-7.svg'
 background:         'assets/img/sunset-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_CA
-url:                http://robporter.ca
+url:                https://robporter.ca
 #url:                http://127.0.0.1:4000/
 
 # Jekyll
