--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              'Rob Porter'
-bio:                'Digital Naturalist || Co-founder and CIO at Weever Apps'
+bio:                'Co-founder and CIO at Weever Apps || Digital Naturalist'
 description:        "Digital Naturalist"
 reading_time:       false
 words_per_minute:   200
